# game

./: CMakeLists.txt  LICENSE
include/: renderer.h
include/ecs/: components.h  core.h  systems.h
src/: main.c  renderer.c
src/ecs/: core.c  systems.c
